[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Connect" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 30.0
margin_right = 120.0
margin_bottom = 90.0
text = "Connect to the Host"

[node name="Create" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 220.0
margin_right = 120.0
margin_bottom = 280.0
text = "Create a Host"

[node name="Offline" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -250.0
margin_right = 120.0
margin_bottom = -190.0
text = "Play offline"

[node name="connect_to_IP" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -80.0
margin_right = 120.0
margin_bottom = -50.0
text = "192.168.1.2"
caret_blink = true

[node name="connect_to_port" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -30.0
margin_right = 120.0
text = "6789"
caret_blink = true

[node name="listen_to_port" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = 170.0
margin_right = 120.0
margin_bottom = 200.0
text = "6789"
caret_blink = true

[connection signal="pressed" from="Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Offline" to="." method="_on_Offline_pressed"]
[connection signal="text_changed" from="connect_to_IP" to="." method="_on_connect_to_IP_text_changed"]
[connection signal="text_changed" from="connect_to_port" to="." method="_on_connect_to_port_text_changed"]
[connection signal="text_changed" from="listen_to_port" to="." method="_on_listen_to_port_text_changed"]
